package za.ac.cput.campus_events.domain;

import jakarta.persistence.Entity;

@Entity
public class Admin {
}