package za.ac.cput.campus_events.entity;

public class PromoCode {
}
